* Swamp worms are now amphibious and generate submerged, emerging to attack the
  player and never resubmerging.
* Deep elf high priests now have an Aura of Brilliance spell that affects all
  allies in their view, making them cast spells more frequently and with more
  spell power.
* Hell hogs now have Fireball, replacing Sticky Flame.
* Maurice can now steal from the floor as well as your inventory.
* Natasha no longer becomes weaker upon revival.
* Death cobs now drain speed, rather than causing hunger.
* Monsters that drain speed can now do so even to creatures with rN.
* Corroding monsters now reduces their AC by 8, rather than halving it.
* Needles no longer strike unaware monsters more powerfully.
* Removed monsters:
  - Octopode crushers.
  - (Plain) spiders.
  - Salamander firebrands.
  - Blue devils.
  - Brain worms.
  - Deep elf fighters, conjurers, priests, and summoners.
  - Trapdoor spiders.
  - Fire drakes.

Spells
------
* New spell: Yara's Violent Unravelling (L5 Hexes/Transumations). Dispels
  all cancellable effects on the target and, if any were dispelled, causes
  a damaging explosion of mutagenic energy around the victim.
* Hydra Form now has a fixed number of heads.
* The Infusion spell has a lower power cap, scaling more quickly to the same
  damage bonus as before.
* Song of Slaying now increases its slaying bonus with every kill, but caps at
  +9 total.
* Tukima's Dance's power multiplier has been reduced.
* Spectral Weapon now bases the strength of the summoned weapon on spell power
  instead of weapon skill.
* Alistair's Intoxication is now level 5 and gives Vertigo status instead of
  confusing the player or draining Int, and can sometimes affect rPois
  monsters.
* Monstrous Menagerie is now level 7 (was 6).
* Shadow creatures is now level 6 (was 5).
* Passwall is now level 2 (was 3).
* Ozocubu's Armour now slows movement slightly while active.
* Removed spells: Stoneskin, Condensation Shield, Mass Confusion, and
  Phase Shift.
