@@ -363,7 +363,8 @@ static const pop_entry pop_slime[] =
   {  1,  9,  390, SEMI, MONS_GREAT_ORB_OF_EYES },
   {  1,  6,  200, RISE, MONS_DEATH_OOZE },
   {  2,  6,  100, RISE, MONS_GIANT_ORANGE_BRAIN },
-  {  1,  6,  800, FLAT, MONS_NO_MONSTER }, // Old ooze weight
+  {  2,  9,   50, SEMI, MONS_GIANT_EYEBALL },
+  {  1,  6,  750, FLAT, MONS_NO_MONSTER }, // Old ooze weight
   { 0,0,0,FLAT,MONS_0 }
 };
 
@@ -1049,6 +1050,7 @@ static const pop_entry pop_depths[] =
   {  1, 14,   60, SEMI, MONS_SPHINX },
   {  2,  8,  135, SEMI, MONS_SPRIGGAN_AIR_MAGE },
   {  2,  8,  185, SEMI, MONS_SPRIGGAN_BERSERKER },
+  {  2, 10,   25, FLAT, MONS_GIANT_EYEBALL },
   {  3, 14,   45, FLAT, MONS_SPRIGGAN_DEFENDER },
   {  4, 14,   80, SEMI, MONS_TENTACLED_MONSTROSITY },
   {  4, 14,   40, FLAT, MONS_STORM_DRAGON },
